# QTransfer

./: .clang-format  CMakeLists.txt  README.md
src/: Makefile  QTransfer.pro  README.md  chat_window.cpp  chat_window.h  main.cpp  moc_transfer_window.cpp  transfer_window.cpp  transfer_window.h
